[package]
name = "web-app-book-dioxus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_log = "1.0.0"
dioxus = { git = "https://github.com/DioxusLabs/dioxus" }
dioxus-web = { git = "https://github.com/DioxusLabs/dioxus"}
gloo = "0.8.0"
log = "0.4.18"
reqwest = { version = "0.11", features = ["json"] }
